Update README.md with project details and installation instructions; modify notebook for clarity and error handling

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -10,7 +10,7 @@
    },
    "outputs": [],
    "source": [
-    "# install.packages(c(\"tidyverse\", \"ggplot2\", \"DataExplorer\", \"corrplot\", \"scales\", \"gridExtra\", \"caret\", \"pROC\", \"car\", \"MASS\", \"caTools\"))\n",
+    "#install.packages(c(\"tidyverse\", \"ggplot2\", \"DataExplorer\", \"corrplot\", \"scales\", \"gridExtra\", \"caret\", \"pROC\", \"car\", \"MASS\", \"caTools\"))\n",
     "\n",
     "library(tidyverse)\n",
     "library(caret)\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -109,94 +109,20 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 6 x 12</caption>\n",
-       "<thead>\n",
-       "\t<tr><th></th><th scope=col>id</th><th scope=col>person_age</th><th scope=col>person_income</th><th scope=col>person_home_ownership</th><th scope=col>person_emp_length</th><th scope=col>loan_intent</th><th scope=col>loan_grade</th><th scope=col>loan_amnt</th><th scope=col>loan_int_rate</th><th scope=col>loan_percent_income</th><th scope=col>cb_person_default_on_file</th><th scope=col>cb_person_cred_hist_length</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>58645</td><td>23</td><td> 69000</td><td>RENT    </td><td>3</td><td>HOMEIMPROVEMENT  </td><td>F</td><td>25000</td><td>15.76</td><td>0.36</td><td>N</td><td>2</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>58646</td><td>26</td><td> 96000</td><td>MORTGAGE</td><td>6</td><td>PERSONAL         </td><td>C</td><td>10000</td><td>12.68</td><td>0.10</td><td>Y</td><td>4</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>58647</td><td>26</td><td> 30000</td><td>RENT    </td><td>5</td><td>VENTURE          </td><td>E</td><td> 4000</td><td>17.19</td><td>0.13</td><td>Y</td><td>2</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>58648</td><td>33</td><td> 50000</td><td>RENT    </td><td>4</td><td>DEBTCONSOLIDATION</td><td>A</td><td> 7000</td><td> 8.90</td><td>0.14</td><td>N</td><td>7</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>58649</td><td>26</td><td>102000</td><td>MORTGAGE</td><td>8</td><td>HOMEIMPROVEMENT  </td><td>D</td><td>15000</td><td>16.32</td><td>0.15</td><td>Y</td><td>4</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>58650</td><td>23</td><td> 66000</td><td>RENT    </td><td>5</td><td>EDUCATION        </td><td>D</td><td>22000</td><td>14.09</td><td>0.33</td><td>N</td><td>2</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.frame: 6 x 12\n",
-       "\\begin{tabular}{r|llllllllllll}\n",
-       "  & id & person\\_age & person\\_income & person\\_home\\_ownership & person\\_emp\\_length & loan\\_intent & loan\\_grade & loan\\_amnt & loan\\_int\\_rate & loan\\_percent\\_income & cb\\_person\\_default\\_on\\_file & cb\\_person\\_cred\\_hist\\_length\\\\\n",
-       "  & <int> & <int> & <int> & <chr> & <dbl> & <chr> & <chr> & <int> & <dbl> & <dbl> & <chr> & <int>\\\\\n",
-       "\\hline\n",
-       "\t1 & 58645 & 23 &  69000 & RENT     & 3 & HOMEIMPROVEMENT   & F & 25000 & 15.76 & 0.36 & N & 2\\\\\n",
-       "\t2 & 58646 & 26 &  96000 & MORTGAGE & 6 & PERSONAL          & C & 10000 & 12.68 & 0.10 & Y & 4\\\\\n",
-       "\t3 & 58647 & 26 &  30000 & RENT     & 5 & VENTURE           & E &  4000 & 17.19 & 0.13 & Y & 2\\\\\n",
-       "\t4 & 58648 & 33 &  50000 & RENT     & 4 & DEBTCONSOLIDATION & A &  7000 &  8.90 & 0.14 & N & 7\\\\\n",
-       "\t5 & 58649 & 26 & 102000 & MORTGAGE & 8 & HOMEIMPROVEMENT   & D & 15000 & 16.32 & 0.15 & Y & 4\\\\\n",
-       "\t6 & 58650 & 23 &  66000 & RENT     & 5 & EDUCATION         & D & 22000 & 14.09 & 0.33 & N & 2\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.frame: 6 x 12\n",
-       "\n",
-       "| <!--/--> | id &lt;int&gt; | person_age &lt;int&gt; | person_income &lt;int&gt; | person_home_ownership &lt;chr&gt; | person_emp_length &lt;dbl&gt; | loan_intent &lt;chr&gt; | loan_grade &lt;chr&gt; | loan_amnt &lt;int&gt; | loan_int_rate &lt;dbl&gt; | loan_percent_income &lt;dbl&gt; | cb_person_default_on_file &lt;chr&gt; | cb_person_cred_hist_length &lt;int&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 1 | 58645 | 23 |  69000 | RENT     | 3 | HOMEIMPROVEMENT   | F | 25000 | 15.76 | 0.36 | N | 2 |\n",
-       "| 2 | 58646 | 26 |  96000 | MORTGAGE | 6 | PERSONAL          | C | 10000 | 12.68 | 0.10 | Y | 4 |\n",
-       "| 3 | 58647 | 26 |  30000 | RENT     | 5 | VENTURE           | E |  4000 | 17.19 | 0.13 | Y | 2 |\n",
-       "| 4 | 58648 | 33 |  50000 | RENT     | 4 | DEBTCONSOLIDATION | A |  7000 |  8.90 | 0.14 | N | 7 |\n",
-       "| 5 | 58649 | 26 | 102000 | MORTGAGE | 8 | HOMEIMPROVEMENT   | D | 15000 | 16.32 | 0.15 | Y | 4 |\n",
-       "| 6 | 58650 | 23 |  66000 | RENT     | 5 | EDUCATION         | D | 22000 | 14.09 | 0.33 | N | 2 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  id    person_age person_income person_home_ownership person_emp_length\n",
-       "1 58645 23          69000        RENT                  3                \n",
-       "2 58646 26          96000        MORTGAGE              6                \n",
-       "3 58647 26          30000        RENT                  5                \n",
-       "4 58648 33          50000        RENT                  4                \n",
-       "5 58649 26         102000        MORTGAGE              8                \n",
-       "6 58650 23          66000        RENT                  5                \n",
-       "  loan_intent       loan_grade loan_amnt loan_int_rate loan_percent_income\n",
-       "1 HOMEIMPROVEMENT   F          25000     15.76         0.36               \n",
-       "2 PERSONAL          C          10000     12.68         0.10               \n",
-       "3 VENTURE           E           4000     17.19         0.13               \n",
-       "4 DEBTCONSOLIDATION A           7000      8.90         0.14               \n",
-       "5 HOMEIMPROVEMENT   D          15000     16.32         0.15               \n",
-       "6 EDUCATION         D          22000     14.09         0.33               \n",
-       "  cb_person_default_on_file cb_person_cred_hist_length\n",
-       "1 N                         2                         \n",
-       "2 Y                         4                         \n",
-       "3 Y                         2                         \n",
-       "4 N                         7                         \n",
-       "5 Y                         4                         \n",
-       "6 N                         2                         "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "# load training dataset and test dataset\n",
     "train_data <- read.csv(\"train.csv\")\n",
-    "test_data <- read.csv(\"test.csv\")\n",
+    "\n",
     "\n",
     "head(train_data)\n",
-    "head(test_data)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -265,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -319,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -368,13 +294,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in eval(expr, envir, enclos): object 'test_data' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(expr, envir, enclos): object 'test_data' not found\nTraceback:\n",
+      "1. as.factor(test_data$person_home_ownership)",
+      "2. is.factor(x)"
+     ]
+    }
+   ],
    "source": [
     "test_data$person_home_ownership <- as.factor(test_data$person_home_ownership)\n",
     "test_data$loan_intent <- as.factor(test_data$loan_intent)\n",
